feat: add projects

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,600;1,400&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -69,7 +68,7 @@
             </li>
           </ul>
         </section>
-        <section id="education">
+        <section class="education" id="education">
           <h2 class="section-title">Education</h2>
           <ul class="education_list">
             <li class="education_item">
@@ -119,7 +118,7 @@
           width="380"
           class="photo"
           alt="Photo of Maria Kuznetsova"
-        />
+        >
       </figure>
       <section class="about" id="about">
           <h2 class="section-title">About me</h2>
@@ -172,98 +171,41 @@
           <h2 class="section-title">My projects</h2>
           <ul class="projects_list">
             <li class="projects_item">
-              <a href="" target="_blank">
-                <img src="img/1.jpg" width="1722" height="969" alt="JS Clock screenshot" class="projects_image">
-                <h3 class="projects_title">JavaScript Clock </h3>
+              <a href="https://bearry-picker.netlify.app/" target="_blank">
+                <img src="img/bearry.png" alt="speed game screenshot" class="projects_image">
+                <h3 class="projects_title">Speed Game</h3>
                 <div class="projects_technologies">
-                  <img src="img/icon1.png" alt="HTML5" title="HTML5">
-                  <img src="img/icon1.png" alt="CSS3" title="CSS3">
-                  <img src="img/icon3.png" alt="JavaScript" title="JavaScript">
+                  <img src="img/all.png" alt="all" title="all">
                 </div>
               </a>
             </li>
             <li class="projects_item">
-              <a href="" target="_blank">
-                <img src="img/1.jpg" width="1722" height="969" alt="JS Clock screenshot" class="projects_image">
-                <h3 class="projects_title">JavaScript Clock
-                  <div class="projects_technologies">
-                    <img src="img/icon1.png" alt="HTML5" title="HTML5">
-                    <img src="img/icon1.png" alt="CSS3" title="CSS3">
-                    <img src="img/icon3.png" alt="JavaScript" title="JavaScript">
-                  </div>
-                </h3>
+              <a href="https://earnest-frangipane-263993.netlify.app/" target="_blank">
+                <img src="img/snake.png" alt="snake game screenshot" class="projects_image">
+                <h3 class="projects_title">Snake Game</h3>
+                <div class="projects_technologies">
+                  <img src="img/react.png" alt="React" title="React">
+                  <img src="img/all.png" alt="all" title="all">
+                </div>
               </a>
             </li>
             <li class="projects_item">
-              <a href="" target="_blank">
-                <img src="img/1.jpg" width="1722" height="969" alt="JS Clock screenshot" class="projects_image">
-                <h3 class="projects_title">JavaScript Clock
-                  <div class="projects_technologies">
-                    <img src="img/icon1.png" alt="HTML5" title="HTML5">
-                    <img src="img/icon1.png" alt="CSS3" title="CSS3">
-                    <img src="img/icon3.png" alt="JavaScript" title="JavaScript">
-                  </div>
-                </h3>
+              <a href="https://yoda-calendars.netlify.app/" target="_blank">
+                <img src="img/advent.png" alt="advent calendar screenshot" class="projects_image">
+                <h3 class="projects_title">Calendar app</h3>
+                <div class="projects_technologies">
+                  <img src="img/react.png" alt="React" title="React">
+                  <img src="img/all.png" alt="all" title="all">
+                </div>
               </a>
             </li>
             <li class="projects_item">
-              <a href="" target="_blank">
-                <img src="img/1.jpg" width="1722" height="969" alt="JS Clock screenshot" class="projects_image">
-                <h3 class="projects_title">JavaScript Clock
-                  <div class="projects_technologies">
-                    <img src="img/icon1.png" alt="HTML5" title="HTML5">
-                    <img src="img/icon1.png" alt="CSS3" title="CSS3">
-                    <img src="img/icon3.png" alt="JavaScript" title="JavaScript">
-                  </div>
-                </h3>
-              </a>
-            </li>
-            <li class="projects_item">
-              <a href="" target="_blank">
-                <img src="img/1.jpg" width="1722" height="969" alt="JS Clock screenshot" class="projects_image">
-                <h3 class="projects_title">JavaScript Clock
-                  <div class="projects_technologies">
-                    <img src="img/icon1.png" alt="HTML5" title="HTML5">
-                    <img src="img/icon1.png" alt="CSS3" title="CSS3">
-                    <img src="img/icon3.png" alt="JavaScript" title="JavaScript">
-                  </div>
-                </h3>
-              </a>
-            </li>
-            <li class="projects_item">
-              <a href="" target="_blank">
-                <img src="img/1.jpg" width="1722" height="969" alt="JS Clock screenshot" class="projects_image">
-                <h3 class="projects_title">JavaScript Clock
-                  <div class="projects_technologies">
-                    <img src="img/icon1.png" alt="HTML5" title="HTML5">
-                    <img src="img/icon1.png" alt="CSS3" title="CSS3">
-                    <img src="img/icon3.png" alt="JavaScript" title="JavaScript">
-                  </div>
-                </h3>
-              </a>
-            </li>
-            <li class="projects_item">
-              <a href="" target="_blank">
-                <img src="img/1.jpg" width="1722" height="969" alt="JS Clock screenshot" class="projects_image">
-                <h3 class="projects_title">JavaScript Clock
-                  <div class="projects_technologies">
-                    <img src="img/icon1.png" alt="HTML5" title="HTML5">
-                    <img src="img/icon1.png" alt="CSS3" title="CSS3">
-                    <img src="img/icon3.png" alt="JavaScript" title="JavaScript">
-                  </div>
-                </h3>
-              </a>
-            </li>
-            <li class="projects_item">
-              <a href="" target="_blank">
-                <img src="img/1.jpg" width="1722" height="969" alt="JS Clock screenshot" class="projects_image">
-                <h3 class="projects_title">JavaScript Clock
-                  <div class="projects_technologies">
-                    <img src="img/icon1.png" alt="HTML5" title="HTML5">
-                    <img src="img/icon1.png" alt="CSS3" title="CSS3">
-                    <img src="img/icon3.png" alt="JavaScript" title="JavaScript">
-                  </div>
-                </h3>
+              <a href="https://dapper-marzipan-a2bdc1.netlify.app/" target="_blank">
+                <img src="img/zoo.png" alt="zoo app screenshot" class="projects_image">
+                <h3 class="projects_title">Zoo app</h3>
+                <div class="projects_technologies">
+                  <img src="img/all.png" alt="all" title="all">
+                </div>
               </a>
             </li>
           </ul>
@@ -276,7 +218,7 @@
         ><i class="fa fa-github"></i></a>
       </div>
       <p class="footer_year">2024</p>
-      <a class="footer_rsschool" href="https://rs.school/" target="_blank">
+      <a class="footer_rsschool" href="https://rs.school/courses/javascript" target="_blank">
         <img
           src="img/rs-school-logo.svg"
           width="86"
