feat: add photo

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       </section>
       <figure class="figure-right-side">
         <img
-          src="img/Photo.jpg"
+          src="img/photo.jpg"
           width="380"
           class="photo"
           alt="Photo of Maria Kuznetsova"
